[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsim"
version = "0.1.0"
description = "Workload simulation pipeline for kernel-level inference profiling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "perfetto>=0.7",
    "numpy>=1.24",
    "pandas>=1.5",
]

[project.optional-dependencies]
# Scheduler backends -------------------------------------------------------
k8s = [
    "kubernetes>=27.0",    # K8s Python client for remote job submission
    "PyYAML>=6.0",         # nicer YAML dry-run output (json fallback w/o this)
]
slurm = []                 # Slurm REST API uses stdlib urllib only

# Full simulation stack (matches Dockerfile) --------------------------------
sim = [
    "scalesim>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
]

# Visualization -------------------------------------------------------------
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

# Backend API ---------------------------------------------------------------
api = [
    "fastapi>=0.100",
    "pydantic>=2.0",
    "uvicorn>=0.23",
]

# Development ---------------------------------------------------------------
dev = [
    "black>=23.0",
    "pytest>=7.0",
]

# Everything ----------------------------------------------------------------
all = [
    "flowsim[k8s,sim,viz,api,dev]",
]

[tool.setuptools.packages.find]
include = [
    "schedulers*",
    "scripts*",
    "simulator*",
    "utils*",
]

[project.scripts]
flowsim = "scripts.cli:main"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
